# snake-game

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot-instructions.md
cmake/: clang-format.cmake  clang-tidy.cmake  cmake-format.cmake  dependencies.cmake  get_cpm.cmake  options.cmake  sanitizers.cmake  warnings.cmake
engine/: CMakeLists.txt
engine/include/: Window.h  engine.h
engine/src/: Window.cpp  engine.cpp
game/: CMakeLists.txt
game/src/: game.cpp  game.h  main.cpp  settings.h
game/src/objects/: grid.cpp  grid.h  snake.cpp  snake.h
game/src/scenes/: scene.h
game/src/scenes/levels/: level.cpp  level.h  level_1.cpp  level_1.h  levels.h
game/src/scenes/menu/: menu.cpp  menu.h
game/src/scenes/snake/: snake.cpp  snake.h
game/src/state/: game.h  rendering.h  settings.h
game/src/utils/: cell_index.cpp  cell_index.h  rendering.cpp  rendering.h  resource.h  timer.cpp  timer.h
